Fixed the issue where fx-version overlapped with code

--- a/src/apisof.net/wwwroot/css/site.css
+++ b/src/apisof.net/wwwroot/css/site.css
@@ -220,8 +220,9 @@ a, a:link, a:visited
 .syntax-view .fx-version.fx-version-inbox,
 .syntax-view .fx-version.fx-version-package {
     position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
+    border-radius: 0.25rem;
+    top: 0;
+    right: 0;
 }
 
 .syntax-view.diff-added, .syntax-view .diff-added {
@@ -234,6 +235,7 @@ a, a:link, a:visited
 
 .syntax-view pre {
     margin-bottom: 0;
+    margin-top: 0.5rem;
     color: black;
 }
 
